# digital_twin_car

./: .env  .gitignore  ARCHITECTURE_WEBSOCKET.md  CHANGEMENTS_WEBSOCKET.md  CONFIGURATION_FRONTEND_PRODUCTION.md  CONFIGURATION_MEATPI.md  DEMARRAGE_RAPIDE_DEPLOIEMENT.md  DEMARRAGE_WEBSOCKET.md  FORMAT_DONNEES_MQTT.md  HISTORIQUE_GRAPHIQUES_ANALYTICS.md  MISE_A_JOUR_FORMAT_MQTT.md  MQTT_INTEGRATION_SUMMARY.md  QUICKSTART.md  README.md  README_WEBSOCKET.md  WEBSOCKET_IMPLEMENTATION.md  digital-twin.service  docker-compose.yml  nginx-digital-twin.conf  package-lock.json  package.json  pnpm-lock.yaml  production.env
digital-twin-car-dashboard/: .gitignore  Dockerfile  README.md  middleware.ts  next.config.mjs  package-lock.json  (+3 more)
digital_twin_logic/backend/: .env  CREATE_DEVICE_TABLES.sql  Dockerfile  MQTT_SETUP.md  SUPABASE_UPDATE_COLUMNS.sql  check_supabase_data.py  pyproject.toml  requirements.txt  setup_test_devices.py  test_device_assignment.py  test_mqtt.py  test_mqtt_publish.py  test_new_mqtt_format.py  test_websocket.py
digital_twin_logic/backend/app/: app.py  database.py  main.py  models.py  mqtt_handler.py  mqtt_handler_old_backup.py  realtime.py
digital_twin_logic/backend/app/ml/: driver_profiler_model.pkl  model_manager.py
digital_twin_logic/backend/app/ml/models/: driving_score_model.pkl  modele_anomalie_obd.pkl  scaler_clustering.pkl  scaler_obd.pkl
digital_twin_logic/backend/app/routers/: devices.py  predictions.py  telemetry.py  vehicles.py
digital_twin_logic/backend/tests/: db_test.py  test_api.py  test_mqtt.py  test_supabase.py  test_vehicles.py
(+42 files in other folders)
