[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-twin-car"
version = "1.0.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "Digital Twin Car Project"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["app"]